assets/main.scss
---
# Only the main Sass file needs front matter (the dashes are enough)
---

@import "minima";

.featured-image-post
{
  width: 100%;
  height: 200px;
  object-fit: cover;
}

.canvas-bg
{
    position: absolute;
    height: 100vh;
    width: 100vw;
    overflow: hidden;
    padding: 0px;
    margin: 0px;
    z-index: -999;
}
.splash-content
{
  left: 0px;
  right: 0px;
  text-align: center;
}

.splash-welcome-container
{
  margin-top: 7vh;
  text-align: center;
}

.splash-logo
{
  height: 35vh;
}

hr{
  border: 0;
  height: 2px;
  width: 20vw;
  margin: auto;
  margin-top: 5vh;
  margin-bottom: 5vh;
  background-image: linear-gradient(to right, transparent, #CCC, transparent);  
}

div
{
  border-width: 0px;
}
body
{
  overflow: hidden;
}

